--- a/src/2d/dig/Makefile.dclaw
+++ b/src/2d/dig/Makefile.dclaw
@@ -132,7 +132,6 @@ COMMON_SOURCES += \
   $(GEOLIB)/flux2fw.f \
   $(GEOLIB)/qad.f \
   $(GEOLIB)/valout.f90 \
-  $(GEOLIB)/filval.f90 \
   $(GEOLIB)/filpatch.f90 \
   $(GEOLIB)/bc2amr.f90 \
   $(GEOLIB)/update.f90 \
@@ -164,6 +163,7 @@ COMMON_SOURCES += \
 
 # list of source files from DIGCLAW library. 
 COMMON_SOURCES += \
+  $(DIGLIB)/filval.f90 \
   $(DIGLIB)/riemannsolvers_dclaw.f \
   $(DIGLIB)/rpn2_dclaw.f \
   $(DIGLIB)/rpt2_dclaw.f \
