--- a/src/2d/dig/Makefile.dclaw
+++ b/src/2d/dig/Makefile.dclaw
@@ -133,7 +133,6 @@ COMMON_SOURCES += \
   $(GEOLIB)/qad.f \
   $(GEOLIB)/valout.f90 \
   $(GEOLIB)/bc2amr.f90 \
-  $(GEOLIB)/update.f90 \
   $(GEOLIB)/setaux.f90 \
   $(GEOLIB)/flag2refine2.f90  \
   $(GEOLIB)/b4step2.f90 \
@@ -164,6 +163,7 @@ COMMON_SOURCES += \
 COMMON_SOURCES += \
   $(DIGLIB)/filval.f90 \
   $(DIGLIB)/filpatch.f90 \
+  $(DIGLIB)/update.f90 \
   $(DIGLIB)/riemannsolvers_dclaw.f \
   $(DIGLIB)/rpn2_dclaw.f \
   $(DIGLIB)/rpt2_dclaw.f \
