added set_dig and others to amr2.f90

--- a/src/2d/dig/Makefile.dclaw
+++ b/src/2d/dig/Makefile.dclaw
@@ -143,7 +143,6 @@ COMMON_SOURCES += \
   $(GEOLIB)/ginit.f \
   $(GEOLIB)/getmaxspeed.f90 \
   $(GEOLIB)/advanc.f \
-  $(GEOLIB)/amr2.f90 \
   $(GEOLIB)/fgmax_read.f90 \
   $(GEOLIB)/fgmax_frompatch.f90 \
   $(GEOLIB)/fgmax_interp.f90 \
@@ -161,6 +160,7 @@ COMMON_SOURCES += \
 
 # list of source files from DIGCLAW library. 
 COMMON_SOURCES += \
+  $(DIGLIB)/amr2.f90 \
   $(DIGLIB)/filval.f90 \
   $(DIGLIB)/filpatch.f90 \
   $(DIGLIB)/update.f90 \
