--- a/src/2d/dig/Makefile.dclaw
+++ b/src/2d/dig/Makefile.dclaw
@@ -132,7 +132,6 @@ COMMON_SOURCES += \
   $(GEOLIB)/flux2fw.f \
   $(GEOLIB)/qad.f \
   $(GEOLIB)/bc2amr.f90 \
-  $(GEOLIB)/setaux.f90 \
   $(GEOLIB)/b4step2.f90 \
   $(GEOLIB)/upbnd.f  \
   $(GEOLIB)/tick.f \
@@ -164,6 +163,7 @@ COMMON_SOURCES += \
   $(DIGLIB)/update.f90 \
   $(DIGLIB)/valout.f90 \
   $(DIGLIB)/flag2refine2.f90  \
+  $(DIGLIB)/setaux.f90 \
   $(DIGLIB)/riemannsolvers_dclaw.f \
   $(DIGLIB)/rpn2_dclaw.f \
   $(DIGLIB)/rpt2_dclaw.f \
