--- a/src/2d/dig/Makefile.dclaw
+++ b/src/2d/dig/Makefile.dclaw
@@ -15,7 +15,6 @@ COMMON_MODULES += \
  $(GEOLIB)/utility_module.f90 \
  $(GEOLIB)/geoclaw_module.f90 \
  $(GEOLIB)/topo_module.f90 \
- $(GEOLIB)/refinement_module.f90 \
  $(GEOLIB)/fgout_module.f90 \
  $(GEOLIB)/fgmax_module.f90 \
  $(GEOLIB)/surge/model_storm_module.f90 \
@@ -31,6 +30,7 @@ COMMON_MODULES += \
  $(DIGLIB)/qinit_module.f90 \
  $(DIGLIB)/auxinit_module.f90 \
  $(DIGLIB)/digclaw_module.f90 \
+ $(DIGLIB)/refinement_module.f90 \
 
 
 # list of source files from AMR library. 
