add make input and make postprocess to common dclaw makefile

--- a/src/2d/dig/Makefile.dclaw
+++ b/src/2d/dig/Makefile.dclaw
@@ -168,3 +168,12 @@ COMMON_SOURCES += \
   $(DIGLIB)/riemannsolvers_dclaw.f \
   $(DIGLIB)/rpn2_dclaw.f \
   $(DIGLIB)/rpt2_dclaw.f \
+
+# Construct input data
+input:
+	$(CLAW_PYTHON) setinput.py
+
+postprocess: 
+	$(CLAW_PYTHON) postprocess 
+
+
