--- a/src/2d/dig/Makefile.dclaw
+++ b/src/2d/dig/Makefile.dclaw
@@ -128,6 +128,7 @@ COMMON_SOURCES += \
   $(GEOLIB)/src2.f90 \
   $(GEOLIB)/src1d.f90 \
   $(GEOLIB)/step2.f90 \
+  $(GEOLIB)/stepgrid.f \
   $(GEOLIB)/flux2fw.f \
   $(GEOLIB)/qad.f \
   $(GEOLIB)/bc2amr.f90 \
@@ -163,7 +164,6 @@ COMMON_SOURCES += \
   $(DIGLIB)/valout.f90 \
   $(DIGLIB)/flag2refine2.f90  \
   $(DIGLIB)/setaux.f90 \
-  $(DIGLIB)/stepgrid.f \
   $(DIGLIB)/b4step2.f90 \
   $(DIGLIB)/riemannsolvers_dclaw.f \
   $(DIGLIB)/rpn2_dclaw.f \
