--- a/src/2d/dig/Makefile.dclaw
+++ b/src/2d/dig/Makefile.dclaw
@@ -125,7 +125,6 @@ COMMON_SOURCES += \
   $(GEOLIB)/cellgridintegrate2.f \
   $(GEOLIB)/topointegral.f \
   $(GEOLIB)/bilinearintegral.f \
-  $(GEOLIB)/src2.f90 \
   $(GEOLIB)/src1d.f90 \
   $(GEOLIB)/step2.f90 \
   $(GEOLIB)/stepgrid.f \
@@ -169,6 +168,8 @@ COMMON_SOURCES += \
   $(DIGLIB)/riemannsolvers_dclaw.f \
   $(DIGLIB)/rpn2_dclaw.f \
   $(DIGLIB)/rpt2_dclaw.f \
+  $(DIGLIB)/src2.f90 \
+
 
 # Construct input data
 input:
