--- a/src/2d/dig/Makefile.dclaw
+++ b/src/2d/dig/Makefile.dclaw
@@ -15,7 +15,6 @@ COMMON_MODULES += \
  $(GEOLIB)/utility_module.f90 \
  $(GEOLIB)/geoclaw_module.f90 \
  $(GEOLIB)/topo_module.f90 \
- $(GEOLIB)/fgout_module.f90 \
  $(GEOLIB)/fgmax_module.f90 \
  $(GEOLIB)/surge/model_storm_module.f90 \
  $(GEOLIB)/surge/data_storm_module.f90 \
@@ -24,16 +23,17 @@ COMMON_MODULES += \
  $(GEOLIB)/multilayer/multilayer_module.f90 \
  $(GEOLIB)/friction_module.f90 \
  $(DIGLIB)/refinement_module.f90 \
- $(GEOLIB)/adjointsup_module.f90 
+ $(GEOLIB)/adjointsup_module.f90
 
 #list of common modules needed for dclaw codes
 COMMON_MODULES += \
  $(DIGLIB)/qinit_module.f90 \
  $(DIGLIB)/auxinit_module.f90 \
  $(DIGLIB)/digclaw_module.f90 \
+ $(DIGLIB)/fgout_module.f90 \
 
 
-# list of source files from AMR library. 
+# list of source files from AMR library.
 COMMON_SOURCES += \
   $(AMRLIB)/prefilp.f90 \
   $(AMRLIB)/trimbd.f90 \
@@ -118,7 +118,7 @@ COMMON_SOURCES += \
   $(AMRLIB)/restrt_alloc.f90 \
   $(AMRLIB)/resize_alloc.f90
 
-# list of source files from GEOCLAW library. 
+# list of source files from GEOCLAW library.
 COMMON_SOURCES += \
   $(GEOLIB)/setprob.f90 \
   $(GEOLIB)/topo_update.f90 \
@@ -153,7 +153,7 @@ COMMON_SOURCES += \
   $(GEOLIB)/set_eta_init.f90 \
 
 
-# list of source files from DIGCLAW library. 
+# list of source files from DIGCLAW library.
 COMMON_SOURCES += \
   $(DIGLIB)/tick.f \
   $(DIGLIB)/amr2.f90 \
@@ -169,4 +169,3 @@ COMMON_SOURCES += \
   $(DIGLIB)/rpn2_dclaw.f \
   $(DIGLIB)/rpt2_dclaw.f \
   $(DIGLIB)/src2.f90 \
-
