switch to using fgout_module.f90 from geoclaw, which should handle dclaw once https://github.com/clawpack/geoclaw/pull/624 is merged

--- a/src/2d/dig/Makefile.dclaw
+++ b/src/2d/dig/Makefile.dclaw
@@ -23,14 +23,14 @@ COMMON_MODULES += \
  $(GEOLIB)/multilayer/multilayer_module.f90 \
  $(GEOLIB)/friction_module.f90 \
  $(DIGLIB)/refinement_module.f90 \
- $(GEOLIB)/adjointsup_module.f90
+ $(GEOLIB)/adjointsup_module.f90 \
+ $(GEOLIB)/fgout_module.f90 \
 
 #list of common modules needed for dclaw codes
 COMMON_MODULES += \
  $(DIGLIB)/digclaw_module.f90 \
  $(DIGLIB)/qinit_module.f90 \
  $(DIGLIB)/auxinit_module.f90 \
- $(DIGLIB)/fgout_module.f90 \
 
 
 # list of source files from AMR library.
