--- a/src/2d/dig/Makefile.dclaw
+++ b/src/2d/dig/Makefile.dclaw
@@ -169,4 +169,5 @@ COMMON_SOURCES += \
   $(DIGLIB)/rpn2_dclaw.f \
   $(DIGLIB)/rpt2_dclaw.f \
   $(DIGLIB)/src2.f90 \
+  $(DIGLIB)/entrainment.f90 \
   $(DIGLIB)/mp_update.f90 \
