--- a/src/2d/dig/Makefile.dclaw
+++ b/src/2d/dig/Makefile.dclaw
@@ -126,9 +126,7 @@ COMMON_SOURCES += \
   $(GEOLIB)/topointegral.f \
   $(GEOLIB)/bilinearintegral.f \
   $(GEOLIB)/src1d.f90 \
-  $(GEOLIB)/step2.f90 \
   $(GEOLIB)/stepgrid.f \
-  $(GEOLIB)/flux2fw.f \
   $(GEOLIB)/qad.f \
   $(GEOLIB)/bc2amr.f90 \
   $(GEOLIB)/upbnd.f  \
@@ -171,3 +169,5 @@ COMMON_SOURCES += \
   $(DIGLIB)/src2.f90 \
   $(DIGLIB)/entrainment.f90 \
   $(DIGLIB)/mp_update.f90 \
+  $(DIGLIB)/flux2fw.f \
+  $(DIGLIB)/step2.f90 \
