--- a/src/2d/dig/Makefile.dclaw
+++ b/src/2d/dig/Makefile.dclaw
@@ -127,6 +127,7 @@ COMMON_SOURCES += \
   $(GEOLIB)/bilinearintegral.f \
   $(GEOLIB)/src1d.f90 \
   $(GEOLIB)/stepgrid.f \
+  $(GEOLIB)/step2.f90 \
   $(GEOLIB)/qad.f \
   $(GEOLIB)/bc2amr.f90 \
   $(GEOLIB)/upbnd.f  \
@@ -170,4 +171,3 @@ COMMON_SOURCES += \
   $(DIGLIB)/entrainment.f90 \
   $(DIGLIB)/mp_update.f90 \
   $(DIGLIB)/flux2fw.f \
-  $(DIGLIB)/step2.f90 \
