--- a/src/2d/dig/Makefile_template
+++ b/src/2d/dig/Makefile_template
@@ -14,7 +14,7 @@ CLAWMAKE = $(CLAW)/clawutil/src/Makefile.common
 CLAW_PKG = dclaw                  # Clawpack package to use
 
 
-EXE = $(PWD)/xgeoclaw
+EXE = $(PWD)/xdclaw
 SETRUN_FILE = setrun.py           # File containing function to make data
 OUTDIR = _output                  # Directory for output
 SETPLOT_FILE = setplot.py         # File containing function to set plots
