--- a/src/2d/dig/Makefile.dclaw
+++ b/src/2d/dig/Makefile.dclaw
@@ -126,7 +126,6 @@ COMMON_SOURCES += \
   $(GEOLIB)/topointegral.f \
   $(GEOLIB)/bilinearintegral.f \
   $(GEOLIB)/src1d.f90 \
-  $(GEOLIB)/stepgrid.f \
   $(GEOLIB)/step2.f90 \
   $(GEOLIB)/qad.f \
   $(GEOLIB)/bc2amr.f90 \
@@ -171,3 +170,4 @@ COMMON_SOURCES += \
   $(DIGLIB)/entrainment.f90 \
   $(DIGLIB)/mp_update.f90 \
   $(DIGLIB)/flux2fw.f \
+  $(DIGLIB)/stepgrid.f \
